# nutricoreiq_v1

./: .dockerignore  .env  .env.template  .gitignore  .gitlab-ci.yml  429.html  Dockerfile  Dockerfile.nginx  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  error.html  postgres_exporter.yml  prometheus.yml  pyproject.toml  pytest.ini  redis.conf  structure.py  test_connect.py
backend/: pyproject.toml
backend/src/app/: alembic.ini  main.py
backend/src/app/alembic/: env.py
backend/src/app/alembic/versions/: 2025_03_14_1244-95f2d4a76d27_create_models.py  2025_03_14_1603-6c635e67e1e3_create_user_model.py  2025_03_14_1748-acaf7eaf0569_create_deleteduser_model.py  2025_03_19_1628-e726b47e097d_create_models.py  2025_03_19_1930-efe7e6215959_create_user_model.py  2025_03_20_0850-ed3174671bf2_create_user_model.py
backend/src/app/api/v1/: __init__.py  auth.py  user.py
backend/src/app/core/: config.py  logger.py
backend/src/app/core/models/: __init__.py  age_group.py  base.py  db_helper.py  gender_age_specific_nutrient.py  gender_metabolism.py  gender_pal.py  nutrient.py  product.py  product_group.py  product_nutrient.py  user.py
backend/src/app/core/schemas/: __init__.py  age_group.py  auth.py  gender_age_specific_nutrient.py  gender_metabolism.py  gender_pal.py  nutrient.py  product.py  product_group.py  user.py
backend/src/app/core/utils/: __init__.py  log_user.py  log_user_helper.py  security.py
backend/src/app/crud/: __init__.py  user.py  users.py
backend/src/app/db/: __init__.py  db_helper.py
backend/src/app/models/: __init__.py  base.py  user.py
backend/src/app/models/mixins/: __init__.py
backend/src/app/schemas/: auth.py
backend/src/app/services/: auth.py
backend/src/app/utils/: __init__.py  logger.py  security.py
backend/src/tests/unit/crud/: test_user.py
config/: postgres_exporter.yml
postgres/: pg_hba.conf
src/: main.py  pytest.ini
src/app/: alembic.ini  docker-compose.dev.yml  docker-compose.yml  lifespan.py  main.py
src/app/alembic/: env.py
src/app/alembic/versions/: 2025_03_20_0913-1a288bfa7b83_create_user_model.py  2025_03_25_0756-d18298e4e283_create_user_model.py  2025_03_25_1259-2fc116aa23af_create_products_nutrients.py  2025_03_27_1921-b8fffdf5021d_update_user_model.py  2025_03_28_0916-e503f1417e42_update_nutrients_products_relationships.py  2025_03_28_1949-20f3f1ed9837_create_userrefreshtoken_update_user_.py  2025_03_29_1449-56a0dc87cb2a_update_userrefreshtoken.py  2025_04_01_1128-1c85f9ae13ea_update_user_model.py  2025_04_03_0805-cd9db5091239_initial_create_models.py  2025_04_03_1012-60d81f8c9e2d_initial_create_models.py  2025_04_09_0913-6c2a586143b9_update_models_for_products.py  2025_04_09_0945-aa3978ee3f98_update_models_for_product_query.py  2025_04_09_1336-b98dc783677e_update_nutrient_model.py  2025_04_11_1109-722564dd4ef4_create_pendingproduct_update_user.py  2025_04_11_1257-f02101570248_update_user_model_by_kfa.py  2025_04_15_1956-9a7a79c24f74_add_units_to_nutrients.py  2025_04_17_1559-f1b03fdc141d_initial_models.py  2025_04_20_0932-395b5b88de34_update_productnutrient_model_by_default_.py  2025_04_24_0929-03637b8bb72b_update_format_data_in_user_model.py  2025_04_24_1635-8e881b9feeec_add_goal_in_user_model.py  2025_04_26_1933-d709ad587862_add_search_vector_triggers_and_funcs_to_.py  2025_05_15_0942-12d9ec7a4890_init_all_models.py  2025_08_03_1326-c1354cf1145d_добавление_поля_is_subcribed_в_модель_.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  auth.py  info.py  product.py  security.py  user.py
src/app/core/: __init__.py  app.py  config.py  exception_handlers.py  exceptions.py  logger.py  redis.py  taskiq_broker.py
src/app/core/certs/: README.md
src/app/core/middleware/: __init__.py  csp_middleware.py  csrf_middleware.py  redis_session_middleware.py
src/app/core/services/: auth.py  email.py
src/app/core/utils/: __init__.py  auth.py
src/app/crud/: product.py  profile.py  user.py
src/app/db/: db_helper.py
src/app/db/models/: __init__.py  base.py  jwt_blacklist.py  nutrient.py  product.py  product_group.py  product_nutrient.py  user.py  (+1 more)
src/app/models/: __init__.py  base.py  deleted_user.py  nutrient.py  pending_product.py  product_nutrient.py  user.py
src/app/routers/: __init__.py  auth.py  product.py  security.py  user.py
src/app/schemas/: auth.py  base.py  product.py  responses.py  user.py
src/app/services/: auth.py  email.py  pending_product.py  product.py  redis.py  redis_service.py  user.py
src/app/tasks/: welcome_email_notification.py
src/app/templates/: about.html  base.html  dashboard.html  index.html  login.html  privacy.html  product_detail.html  profile.html  register.html
src/app/utils/: __init__.py  auth.py  case_converter.py  jwt-private.pem  jwt-public.pem  log_user_helper.py  product.py  redis.py  security.py  templates.py
src/backend/: .gitignore  main.py
src/backend/core/: config.py
src/backend/crud/: users.py
src/tests/: conftest.py
src/tests/v1/: conftest.py
(+29 files in other folders)
