[tool.poetry]
name = "nutricoreiq"
version = "0.1.0"
description = ""
authors = ["di <dit99871@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.11"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
black = "^25.1.0"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.4.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
redis = "^5.2.1"
mypy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
pylint = "^3.3.5"
ruff = "^0.11.0"
types-python-jose = "^3.5.0.20250531"
pytest-cov = "^5.0.0"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[mypy.plugins]
pydantic.mypy = true

[[tool.mypy.overrides]]
module = ["src.app.*", "src.tests.*"]
ignore_missing_imports = true