[tool.poetry]
name = "nutricoreiq"
version = "0.1.0"
description = ""
authors = ["di <dit99871@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.11"}
prometheus-fastapi-instrumentator = "^7.0.0"
uvicorn = "^0.34.3"
gunicorn = "^23.0.0"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.41"
black = "^25.1.0"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.4.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
redis = "6.2.0"
mypy = "^1.16.0"
httpx = "^0.28.1"
pytest = "^8.4.0"
aiosmtplib = "^4.0.1"
taskiq = "^0.11.18"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
pylint = "^3.3.5"
ruff = "^0.11.0"
types-python-jose = "^3.5.0.20250531"
pytest-cov = "^5.0.0"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[mypy.plugins]
pydantic.mypy = true

[[tool.mypy.overrides]]
module = ["src.app.*", "src.tests.*"]
ignore_missing_imports = true
